Added more details about Eastern cottontail rabbit

--- a/animal.html
+++ b/animal.html
@@ -9,9 +9,16 @@
 	
 	<body>
 	
-		<h1>RABBIT</h1>
+		<h1>Eastern cottontail</h1>
 		
 		<p>Rabbits are cool.</p>
+		<h1>The adult Eastern cottontail weighs 2.5 pounds as an adult. </h1> 
+		<h1> They are usually brown with a bit of white on the fur. </h1>
+		<h1> The population for Eastern cottontail is growing and it is a common rabbit in many places. </h1>
+		<h1>They have four legs </h1>
+		<h1> The size of the rabbits varies from 15.5 inches to 18.75 inches </h1>
+		<h1> They live up to 3 years in the wild </h1>
+		
 	
 	</body>
 
